k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-duper-doodle
spec:
  selector:
    app: super-duper-doodle
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
